# fungi

./: README.md  build.bat  build.spec  codec_list.py  converter.py  log.txt  main.bat  main.py  palette.py  pyproject.toml  tf.py  whats_new.txt  zip_list.py
data/: create_header_list.py  dds_tools.py  save_all_fmt.py  temp.dds
data/local/: de.json  en.json  es.json  fr.json  it.json  jp.json  ko.json  pl.json  pt.json  ru.json  th.json  tr.json  uk.json  vi.json  zh.json
